<?xml version="1.0"?>
<package format="2">
  <name>radar_canfd_driver</name>
  <version>0.1.0</version>
  <description>Dual-ARS620 CANFD driver (CH0 + CH1), self-contained</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
